--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </audio>
 </div>
 <div id="footer">
-  This page was created by Zora Viel and pays respects to the masterpiece that is MF DOOM. Background image by <a href="https://pixabay.com/users/annaliseart-7089643/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=4737229">Please Don't sell My Artwork AS IS</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=4737229">Pixabay</a> You can find ways to stream his music on his <a href='https://gasdrawls.com/pages/stream'>website</a>. This page was created using HTML, CSS and JavaScript.
+  This page was created by Zora Viel and pays respects to the masterpiece that is MF DOOM. Background image by <a href="https://pixabay.com/users/annaliseart-7089643/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=4737229">Please Don't sell My Artwork AS IS</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=4737229">Pixabay</a> You can find ways to stream his music on his <a href='https://gasdrawls.com/pages/stream'>website</a>. This page was created using HTML, CSS and JavaScript. Here is the <a href="https://github.com/zoraviel/music-sampler">Github link.</a>
 </div>
   <script src="js/main.js"></script>
   </article>
